--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -52,6 +52,7 @@ a {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   gap: 10px;
+  margin-bottom: 60px;
   justify-items: center;
   align-items: center;
 }
